log
Wed 08 May 2024 03:03:16 PM UTC: 
 tests:  1|8
total_score: 0/70
ae3a35e
Wed 08 May 2024 03:13:28 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++----
 1 file changed, 31 insertions(+), 4 deletions(-)
 tests:  3|7
total_score: 5/70
03a685a
Wed 08 May 2024 03:16:02 PM UTC: 
 treemap.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0316c54
Wed 08 May 2024 03:17:52 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d6307d4
Wed 08 May 2024 03:35:12 PM UTC: 
 treemap.c | 23 +++++++++++++++--------
 1 file changed, 15 insertions(+), 8 deletions(-)
 tests:  3|7
total_score: 5/70
1608688
Wed 08 May 2024 03:49:32 PM UTC: 
 treemap.c | 27 ++++++++++++++-------------
 1 file changed, 14 insertions(+), 13 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
090ce8e
Wed 08 May 2024 03:50:41 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:20: error: unused variable ‘parent’ [-Werror=unused-variable]
   53 |         TreeNode * parent = current;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ac625c1
Wed 08 May 2024 03:54:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:20: error: unused variable ‘parent’ [-Werror=unused-variable]
   53 |         TreeNode * parent = current;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f9b347d
Wed 08 May 2024 03:54:38 PM UTC: 
 treemap.c | 13 +------------
 1 file changed, 1 insertion(+), 12 deletions(-)
 tests:  11|6
total_score: 15/70
297c2c0
Wed 08 May 2024 04:06:56 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
3eed4c0
Wed 08 May 2024 04:12:29 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
acc8d02
Wed 08 May 2024 04:16:53 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
f3d409c
Wed 08 May 2024 04:17:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
b3201c0
Wed 08 May 2024 04:17:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b474dab
